tests/textual/error/lessThanByteString.uplc
(program 0.0.0 [ [(builtin lessThanByteString) (con bytestring #00ff)] (con string "#00ffaa") ])
